ebus Daemon (ebusd) - ChangeLog
===============================

2013-03-03:
* Added debian init script ebusd.init to contrib.
* Fixed autogen.sh that it worked properly with bourne shell.

2013-03-01:
* Added new directory doc with some usefull documentation.
* Added an example command csv file into contrib directory.
* Changed width of class string from 5 to 20.

2013-02-28:
* Added loglevel as telnet command to change logging level at runtime.
* Moved eb_cmd* functions from ebus-bus file to new ebus-cmd file.
* Added many explicit casts to remove compiler warnings.

2013-02-27:
* Fix memory leak in eb_raw_print_hex twice.
* Added new config parameter print_size to adjust number of bytes at output stream.

2013-02-25:
* Fix possible memory leaks in eb_raw_print_hex and eb_search_cyc

2013-02-22:
* Add <cr> too each client answer (no need of special config for putty)
* Minor print cosmetic with cyc commands on Master Slave types 

2013-02-21:
* Improve decoding of cyc commands to all ebus message types.
* Added function eb_cyc_data_process to decode all cyc ebus message types.
* Removed hex bitmask of logging output.
* Fixed uninitialized buffer in eb_cyc_data_recv.

2013-02-19:
* Added some usefull description of ebusd to README

2013-02-18:
* Changed name of functions for message handling from eb_send_cmd to eb_msg_execute.
* Changed name of eb_msg_search_hex function to eb_msg_search_cyc.

2013-02-17:
* Added csv tool to print command configuration.
* Added decoding of cyc commands.
* Fixed daemon crash when telnet command window closed without quit signal.
* Split dat (date) decode format into bda (bcd) and hda (hex).
* Split tim (time) decode format into bti (bcd) and hti (hex).
* Added internal buffer for cyc data, so cyc commands can be used like get/set
  to fetch last data.

2013-02-16:
* Structure for commands improved so only one structure for GET/SET/CYC is needed
* Possible formats for GET / SET (asc, bcd, d1b, d1c, d2b, d2c, dat, tim)