@@ -1,6 +1,9 @@
 ebus Daemon (ebusd) - ChangeLog
 ===============================
 
+2013-03-06:
+* Fixed extension for command files in configuration. A point is not necessary.
+
 2013-03-03:
 * Added debian init script ebusd.init to contrib.
 * Fixed autogen.sh that it worked properly with bourne shell.
